#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([segmenter], [r49], [corp186@assembla.com])

AM_INIT_AUTOMAKE(segmenter, r49)

# Checks for programs.
AC_PROG_CC

AC_CHECK_LIB([avformat], [av_new_stream])

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h libavformat/avformat.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([strrchr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
